[package]
name = "baldguard"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
regex = "1.11.1"
unescape = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.mongodb]
version = "3.1.0"
