[package]
name = "baldguard-language"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.22.0"

[dependencies]
lalrpop-util = { version = "0.21.0", features = ["lexer", "unicode"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
unescape = "0.1.0"
teloxide = { version = "0.13" }
